apps/infra/minio-proxy/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
