apps/infra/minio-proxy/resources/ingressroute.sops.tmp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: console.s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: minio-console-production
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`console.s3.anotherlife.org.pl`) && (PathPrefix(`/`))
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: minio-console
              port: 9001
              scheme: http
              passHostHeader: true
    tls:
        domains:
            - main: s3.anotherlife.org.pl
              sans:
                - .s3.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        secretName: minio-console-s3-cf-production
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: api.s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: api.s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: s3-production
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`api.s3.anotherlife.org.pl`)
          services:
            - name: minio-api
              port: 9002
              scheme: http
              #   passHostHeader: true
    tls:
        domains:
            - main: api.s3.anotherlife.org.pl
              sans:
                - .api.s3.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        # minio-api-cf-production
        secretName: minio-console-s3-cf-production
