apps/infra/minio-proxy/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: console.s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: console.s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: s3.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: minio-console-production
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`console.s3.anotherlife.org.pl`) && (PathPrefix(`/`))
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: minio-proxy
              port: 9001
              scheme: http
              # passHostHeader: true
    tls:
        domains:
            - main: s3.anotherlife.org.pl
              sans:
                - .s3.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        secretName: minio-console-s3-cf-production
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#     annotations:
#         argocd.argoproj.io/sync-wave: "3"
#         cert-manager.io/cluster-issuer: letsencrypt-production
#         cert-manager.io/common-name: api.s3.anotherlife.org.pl
#         external-dns.alpha.kubernetes.io/hostname: api.s3.anotherlife.org.pl
#         external-dns.alpha.kubernetes.io/target: s3.anotherlife.org.pl
#         external-dns.alpha.kubernetes.io/ttl: "300"
#         kubernetes.io/ingress.class: traefik-external
#     name: s3-production
#     namespace: traefik
# spec:
#     entryPoints:
#         - websecure
#     routes:
#         - kind: Rule
#           match: Host(`api.s3.anotherlife.org.pl`)
#           services:
#             - name: minio-api
#               port: 9002
#               scheme: http
#               #   passHostHeader: true
#     tls:
#         domains:
#             - main: api.s3.anotherlife.org.pl
#               sans:
#                 - .api.s3.anotherlife.org.pl
#         options:
#             name: tls-ver13
#             namespace: traefik
#         # minio-api-cf-production
#         secretName: minio-console-s3-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHV29jOUh3Y2ZwbGhabDc2
[...]
            nbvKAxPPcxPp/6KkMkRui2t34YZq9/+9iJr85J2+YnPoBSEiVb4swA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-02T23:42:02Z"
    mac: ENC[AES256_GCM,data:EMmg7d02HrpzK4rRbGKbEyL2wiY0Nwxs2laxdRhO3SokoIGorYgZGV2dNuhyuIgO/XN/bie8LF3Eyok/H5F8pGaKKiKnWzYz9FqWsm5jUPQWUCtYu3zsusTqjGwJ+kJKlMJgHr1OhOBEWHw2H9tIqmFsoQz4fr2A5wGkoibHZ7M=,iv:5hEQWcdhKItVEPIUFBUxVrSR9+9C8is9utjl6pmfiPA=,tag:MpZP4WP82nKLpBZcM62mXQ==,type:str]
    pgp:
        - created_at: "2024-09-17T11:25:48Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//djGjeib4dgOr3TCWyXax5OximwIRTk8SalChssx9wdXU
[...]
            =zwI+
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
