apps/infra/minio-proxy/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: ENC[AES256_GCM,data:YxwezDTQPFoRFbrudo7mAzYutW38C8Xrvc2mTBo=,iv:OSqeGJMkKEbdeC34651YSD1Ui2rhkMiPz+0Z8585Oh4=,tag:WfrNbcmn9iedPldkI3JJzw==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:y6eHaNIFVHcGXYTAl4PmJ3l8RRGE0yBKWvvL92A=,iv:1vit8kgveezzLrHptTbr3bShL9PtUjQk0xGjKnBxWZQ=,tag:ntrznVD+dAyuvIV1nEbyxQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:cGjNDeolgsSxthpNXIBwEP3WK4MX,iv:S/T9r07lnUNluMIm7rY5ruCy0PZAGgAzThWuVTCH0oQ=,tag:tDRqQaR/MU3s8wanXOkzfA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: minio-console-staging
    namespace: minio-proxy
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:yceMZT0cBMNX747cw4IxyZSZUkAMJ0TyRFJ7sVYC6jVZp/eHKNbnYLIt7mc9I6lpOeKdkoEqHgNs7w==,iv:uQKUxdUxEzDmcIBNJItku6huxRE3dHlzXCdN/ocObvw=,tag:CH0dB1vR05pA7QrMfieV4A==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: minio-proxy
              port: 9001
              scheme: http
              passHostHeader: true
    tls:
        domains:
            - main: ENC[AES256_GCM,data:qZ7tK8fMQMgI9+gpY9OZRMf5N70U,iv:mar3mYJzf2xh0kF09mXh9MDjDLMydsOP5vtCplKYHOo=,tag:8Qe097LZz2Oq1dnPJoailA==,type:str]
              sans:
                - ENC[AES256_GCM,data:hliqu69ndSqbow8zhSkT2PwILK2tpA==,iv:gExqvQcdJiwXOdwtcC1XDyDv+lBQ58kHqdCFt78asL4=,tag:RPo2esAO+ki/m0x44ETj+w==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: console-s3-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYeXJZeTFIQUt5NGg2OVJY
[...]
            Ds/bc5FIjRjZYYiWd0koqQAHZgceMe1J4IGhzeM+Cb0Jm/DpPk5Xiw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-05T15:58:54Z"
    mac: ENC[AES256_GCM,data:v/K4cTmvCnKCsdsltjtWBnXKYqh3h/RggLdGMGGoeHwGQ3nvlJa2Dd7r+YVeuGQJmoQSEcsgHEJCg6/qRoucHgRjtRmSpTIoaruRhjRRNHkfNV8USHP6J4kBqvLEKP+1hEMqFLgxgq4b40aFyhvEQ0qvIE6HJZOmEXmS+wporg0=,iv:SQmQ2S8Nts6vMjXjvZ7CFlV2X3Zow3Ad3j1HF4AMQGc=,tag:PjS5k9KE7OigWe0HZB7BPg==,type:str]
    pgp:
        - created_at: "2024-10-05T15:52:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAvto0XQgRHDMUkOxfzkShUu6X1F3NRgccTRLtUUPmNIK+
[...]
            =TImy
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones|cert-manager.io/common-name|commonName|external-dns.alpha.kubernetes.io/hostname|external-dns.alpha.kubernetes.io/target|match|main|sans)$
    version: 3.9.0
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: ENC[AES256_GCM,data:+W8f3oL4AOILoKBLVF6jQ9HlPWYiUr8z8w==,iv:6Wx/tRuikBbH+D0KobxLbqCN/PxwLluFle4x85UGAl0=,tag:LgU3Dloq4+HoHSNEQPEuyw==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:81D+uBzI1Sbk3tknLXgmJxGSiUjfqHZGHA==,iv:KXHKMYV+RY/CYDEMXoQRfoqMkgNqTeE2mqWt2tcWOsE=,tag:/BdILevfXdzuceOAQR352A==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:cGjNDeolgsSxthpNXIBwEP3WK4MX,iv:S/T9r07lnUNluMIm7rY5ruCy0PZAGgAzThWuVTCH0oQ=,tag:tDRqQaR/MU3s8wanXOkzfA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: minio-api-staging
    namespace: minio-proxy
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:oVdNKESYcuF6RuccxzeYrhCjUk9wgXH5kEMpK4Dk4In6,iv:7llXEwx1PCupiu7DAPwn+nBQibPVwASJUDiyC3qFHF4=,tag:0smmHgloHBmhoOKyI2rY8A==,type:str]
          services:
            - name: minio-api
              port: 9002
              scheme: http
              #   passHostHeader: true
    tls:
        domains:
            - main: ENC[AES256_GCM,data:qZ7tK8fMQMgI9+gpY9OZRMf5N70U,iv:mar3mYJzf2xh0kF09mXh9MDjDLMydsOP5vtCplKYHOo=,tag:8Qe097LZz2Oq1dnPJoailA==,type:str]
              sans:
                - ENC[AES256_GCM,data:hliqu69ndSqbow8zhSkT2PwILK2tpA==,iv:gExqvQcdJiwXOdwtcC1XDyDv+lBQ58kHqdCFt78asL4=,tag:RPo2esAO+ki/m0x44ETj+w==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: api-s3-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYeXJZeTFIQUt5NGg2OVJY
[...]
            Ds/bc5FIjRjZYYiWd0koqQAHZgceMe1J4IGhzeM+Cb0Jm/DpPk5Xiw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-05T15:58:54Z"
    mac: ENC[AES256_GCM,data:v/K4cTmvCnKCsdsltjtWBnXKYqh3h/RggLdGMGGoeHwGQ3nvlJa2Dd7r+YVeuGQJmoQSEcsgHEJCg6/qRoucHgRjtRmSpTIoaruRhjRRNHkfNV8USHP6J4kBqvLEKP+1hEMqFLgxgq4b40aFyhvEQ0qvIE6HJZOmEXmS+wporg0=,iv:SQmQ2S8Nts6vMjXjvZ7CFlV2X3Zow3Ad3j1HF4AMQGc=,tag:PjS5k9KE7OigWe0HZB7BPg==,type:str]
    pgp:
        - created_at: "2024-10-05T15:52:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAvto0XQgRHDMUkOxfzkShUu6X1F3NRgccTRLtUUPmNIK+
[...]
            =TImy
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones|cert-manager.io/common-name|commonName|external-dns.alpha.kubernetes.io/hostname|external-dns.alpha.kubernetes.io/target|match|main|sans)$
    version: 3.9.0
